I hope with this push , its now public :)

Catchable v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}.